Minor fix
Made sure landing text always appears on top of image so it doesn't look like a typo on smaller screens

--- a/frontend/src/components/Landing/Landing.css
+++ b/frontend/src/components/Landing/Landing.css
@@ -42,6 +42,7 @@
 .landing__header__main {
     font-size: 4.0rem;
     font-weight: 800;
+    z-index: 1000;
 }
 
 .landing__header__discount {
